parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-40.snap
---
source: parser/src/lexer/lexer.rs
description: "**"
---
[
    Token {
        kind: Pow,
        value: None,
        start: 0,
        end: 2,
    },
]
