parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-48.snap
---
source: parser/src/lexer/lexer.rs
description: "|"
---
[
    Token {
        kind: BitOr,
        value: None,
        start: 0,
        end: 1,
    },
]
