parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-53.snap
---
source: parser/src/lexer/lexer.rs
description: ">"
---
[
    Token {
        kind: Greater,
        value: None,
        start: 0,
        end: 1,
    },
]
