parser/src/lexer/snapshots/parser__lexer__lexer__tests__test-lexer-57.snap
---
source: parser/src/lexer/lexer.rs
description: "!="
---
[
    Token {
        kind: NotEq,
        value: None,
        start: 0,
        end: 2,
    },
]
