parser/src/lexer/snapshots/parser__lexer__lexer__tests__unicode-string-literals-2.snap
---
source: parser/src/lexer/lexer.rs
description: "u\"\""
---
[
    Token {
        kind: Unicode,
        value: Str(
            "u\"\"",
        ),
        start: 0,
        end: 3,
    },
]
